# betanalysis

./: .gitignore  DEPLOY.md  DEPLOY_RENDER.md  README.md  data_vcera.html  render.yaml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  main.py  parser.py
backend/app/api/: admin.py  auth.py  sources.py  templates.py  tickets.py
backend/app/models/: system.py  ticket.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 409e731c04fd_initial_schema.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BookmakerBadge.tsx  Layout.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx
frontend/src/pages/: Admin.tsx  Dashboard.tsx  EditTicket.tsx  ImportTicket.tsx  Login.tsx  Reporting.tsx  Settings.tsx  SharedTicket.tsx  SourcesManagement.tsx  TemplatesManagement.tsx  TicketDetail.tsx  TicketList.tsx  UserProfile.tsx
frontend/src/services/: api.ts
