[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bet-analysis-backend"
version = "1.0.0"
description = "Backend for betting data analysis application"
authors = [{name = "User"}]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "sqlalchemy==2.0.23",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "python-dateutil==2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.11.0",
    "isort==5.12.0",
]
